frontend/test/should_pass/entity_named_like_container_type.grg
test t(ref map:map<int,string>, ref set:set<string>, ref array:array<int>, ref deque:deque<object>)
{
}
