frontend/test/should_fail/computations_no_return_002.grg
test t : (int, int)
{
	independent {
		yield {
			return (0,1);
		}
	}
	
	return (0,1);
}
